Fix tag-this z-index

--- a/app/assets/stylesheets/DocumentSet/show/tag-this.less
+++ b/app/assets/stylesheets/DocumentSet/show/tag-this.less
@@ -6,7 +6,7 @@
     position: absolute;
     top: 100%;
     right: 0;
-    z-index: 1;
+    z-index: 3; // above search+view, in case popup is super-wide
     background: @body-bg;
     white-space: nowrap;
     border: 1px solid @btn-default-border;
